<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Transform</string>
    <string name="hello_world">Squid butcher messenger bag direct trade. Twee gentrify literally fingerstache jean shorts fixie, sustainable sartorial helvetica vice neutra selfies church-key lomo keytar. Sustainable viral +1 gluten-free small batch, jean shorts chillwave beard you probably heard of them pickled occupy vegan. Actually keytar plaid, post-ironic typewriter trust fund fingerstache american apparel bicycle rights you probably heard of them YOLO bushwick blue bottle wolf banksy. Gluten-free pickled hella tonx 8-bit, blue bottle jean shorts tumblr retro carles master cleanse twee locavore authentic plaid. Tattooed kale chips squid, kogi leggings quinoa gastropub forage tumblr brooklyn narwhal cardigan echo park wes anderson pop-up. Readymade pop-up fanny pack street art banh mi.
        Marfa try-hard artisan, neutra small batch you probably heard of them hella dreamcatcher tousled locavore odd future. Bicycle rights VHS master cleanse next level odd future godard. Cray pug selfies keytar etsy organic. Try-hard thundercats letterpress, pug tofu wolf pour-over pop-up. Flexitarian gluten-free thundercats raw denim butcher photo booth stumptown vegan hashtag, mustache banjo pop-up dreamcatcher. Gluten-free aesthetic direct trade, disrupt intelligentsia tattooed synth fixie flexitarian ugh vegan sriracha ennui occupy. seitan raw denim banh mi, fanny pack swag polaroid.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fringilla accumsan malesuada. Vivamus laoreet consequat augue, sed sollicitudin tellus iaculis et. Aliquam scelerisque dictum gravida. Maecenas feugiat enim nec mi volutpat mollis. Proin vestibulum lobortis malesuada. Quisque aliquam commodo elementum. Curabitur aliquet ultricies luctus. Vestibulum vel scelerisque justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed egestas libero sed orci auctor sit amet semper dui mollis. Praesent vehicula commodo eros a posuere. Quisque quis ultricies eros. Maecenas hendrerit risus et purus adipiscing suscipit. Sed eget condimentum risus. Phasellus ac urna tincidunt neque pretium dignissim. In vel urna erat.
		Phasellus ut nisl lorem, eget sollicitudin mauris. Proin tincidunt dignissim dui, et laoreet mauris tempus ac. Praesent sollicitudin, turpis sit amet porta dignissim, dolor elit gravida ligula, a tempus diam sapien nec tortor. Pellentesque nulla lorem, malesuada quis laoreet at, luctus sed eros. Mauris varius hendrerit quam, in iaculis dolor volutpat ac. Pellentesque luctus nisl eget ligula commodo gravida. Aenean id mi lacus. In ullamcorper, arcu nec consectetur pharetra, elit massa elementum ipsum, id accumsan nunc dui at nunc. Nam vulputate posuere lobortis. Curabitur adipiscing tincidunt justo, sed eleifend velit aliquet ut. Proin convallis ullamcorper purus, ac dignissim lacus pharetra eget. Proin vitae massa tortor, eget viverra dolor. Ut nec dui non odio fringilla adipiscing condimentum at magna. Fusce congue, ante a suscipit porttitor, metus nunc venenatis mi, sit amet mattis est velit id dolor.
		Cras nibh lacus, bibendum vel placerat eu, iaculis in magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse nibh tellus, dictum vel congue eget, venenatis sed libero. Nullam et sem arcu, malesuada facilisis tortor. Morbi nec arcu in lacus laoreet feugiat consectetur eu lacus. Nulla non urna nunc, in eleifend erat. Nam pretium viverra commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse commodo risus sit amet nisi gravida ac rhoncus magna tristique. Aenean venenatis quam ut ante cursus at rhoncus diam laoreet. Nullam rutrum gravida risus eu eleifend. Cras vel pretium tortor.
		Maecenas adipiscing placerat metus id iaculis. Morbi magna sapien, auctor quis facilisis eu, molestie ut est. Duis tincidunt sagittis tellus id vestibulum. Sed consequat, diam et lacinia faucibus, felis lorem feugiat dolor, sit amet scelerisque nisi eros eu odio. Fusce ipsum risus, blandit eu lobortis nec, dignissim et nisl. Vivamus dignissim blandit mollis. Pellentesque ac eros eu quam luctus adipiscing.
		Sed rhoncus nibh non elit volutpat convallis ut sit amet risus. Duis vehicula varius arcu vel mollis. Morbi vel mollis risus. Praesent eu tempus sapien. Morbi augue neque, ullamcorper et ornare quis, sollicitudin suscipit nisl. In malesuada, lacus non lobortis dignissim, leo nisl vulputate ipsum, quis convallis quam ante in tortor. Proin eu magna nec tortor hendrerit feugiat hendrerit sed est.</string>
    <string name="goodbye_world">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis dignissim gravida. Vestibulum tristique risus at diam lacinia pulvinar. Sed laoreet, purus id interdum dapibus, urna nibh ultrices tellus, id congue felis leo id leo. Proin dapibus dictum libero, id dignissim nunc ultricies eu. Morbi ligula metus, euismod nec ultrices egestas, aliquam non lacus. In euismod fringilla consectetur. Morbi non lacinia nisl. Cras imperdiet malesuada auctor. Curabitur et adipiscing eros. Nam sollicitudin elit vel elit lobortis sed interdum leo dapibus. Vivamus molestie elementum mi, sit amet imperdiet nibh aliquam at. Phasellus at odio non mi feugiat rhoncus. Nunc at sapien sem, sed viverra orci.</string>
    <string name="hello_again_world">Hello again!</string>
    <string name="menu_settings">Settings</string>
	<string name="settings_name">Settings</string>
	<string name="pref_editor_title">Editor</string>
	<string name="pref_title_syntax_highlighting">Syntax Highlighting</string>
	<string name="pref_summary_syntax_highlighting">Turn on syntax hightlighting</string>
	<string name="pref_summary_tab_stop">Adjust tab size</string>
	<string name="pref_title_tab_stop">Tab size</string>
	<string name="pref_default_tab_stop">4</string>
	<string name="pref_title_tab_space">Replace tabs with spaces</string>
	<string name="pref_summary_tab_space_off">Tabs will not be replaced by spaces</string>
	<string name="pref_summary_tab_space_on">Tabs will be replaced by spaces</string>
	<string name="pref_text_tab_space_off">Don\'t replace</string>
	<string name="pref_text_tab_space_on">Replace</string>
    
</resources>